[gd_scene load_steps=2 format=3 uid="uid://vv7c5lua0a4c"]

[ext_resource type="Script" uid="uid://bd4lw6ricn31x" path="res://menu_pausa.gd" id="1_jd2x8"]

[node name="MenuPausa" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_jd2x8")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.39215687)

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="BotaoContinuar" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Continuar"

[node name="BotaoMenu" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Voltar ao Menu"

[node name="BotaoSair" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Sair do Jogo"
